[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-http-check"
version = "0.1.5"
description = "HTTP status check connector for ifuri and urirun"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun @ git+https://github.com/if-uri/urirun.git#subdirectory=adapters/python",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://connect.ifuri.com/connectors/http-check"
Repository = "https://github.com/if-uri/urirun-connector-http-check"

[project.scripts]
urirun-http-check = "urirun_connector_http_check.core:main"

[project.entry-points."urirun.bindings"]
http-check = "urirun_connector_http_check.core:urirun_bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_http_check*"]

[tool.setuptools.package-data]
urirun_connector_http_check = ["connector.manifest.json"]
